--- a/client-area/new-request.html
+++ b/client-area/new-request.html
@@ -74,7 +74,7 @@
             
             <!-- Navigation Section -->
             <nav class="hidden lg:flex items-center space-x-8">
-                <a href="javascript:void(0)" onclick="navigateTo('dashboard.html')" class="nav-link">
+                <a href="javascript:void(0)" onclick="navigateTo('home.html')" class="nav-link">
                     <i class="fas fa-home text-sm"></i> Home
                 </a>
                 <a href="javascript:void(0)" onclick="navigateTo('new-request.html')" class="nav-link active">
