--- a/support/index.html
+++ b/support/index.html
@@ -159,7 +159,7 @@
                     </p>
                 </div>
                 <div class="mt-6 md:mt-0">
-                    <a href="#" class="btn-portal">Enter Area</a>
+                    <a href="https://techgrid-systems.github.io/techgrid-systems/client-area/login" class="btn-portal">Enter Area</a>
                 </div>
             </div>
 
@@ -216,7 +216,7 @@
                     </p>
                 </div>
                 <div class="mt-6 md:mt-0">
-                    <a href="#" class="btn-portal">Log In</a>
+                    <a href="https://techgrid-systems.github.io/techgrid-systems/voip-portal/login" class="btn-portal">Log In</a>
                 </div>
             </div>
 
@@ -255,3 +255,4 @@
     </script>
 </body>
 </html>
+
