--- a/client-area/index.html
+++ b/client-area/index.html
@@ -133,9 +133,11 @@
                 </div>
                 <div class="hidden md:flex items-center space-x-6">
                     <a href="https://techgrid-systems.github.io/techgrid-systems/" class="text-sm font-bold text-slate-600 hover:text-blue-600 transition uppercase tracking-wider">Home</a>
-                    <button class="bg-blue-600 text-white px-6 py-2.5 rounded-md text-xs font-black uppercase tracking-widest hover:bg-blue-700 transition">
+                  <a href="https://techgrid-systems.github.io/techgrid-systems/status/"> 
+                      <button class="bg-blue-600 text-white px-6 py-2.5 rounded-md text-xs font-black uppercase tracking-widest hover:bg-blue-700 transition">
                         System Status
                     </button>
+                  </a>
                 </div>
             </div>
         </nav>
